[tool.poetry]
name = "youtube-downloader-flask"
version = "0.1.0"
description = ""
authors = ["Arpan Pandey <arpan@hackersreboot.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
pytube = "^12.1.0"
pylint-werkzeug = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
